--- a/.github/workflows/mainbuild.yml
+++ b/.github/workflows/mainbuild.yml
@@ -1,8 +1,9 @@
 name: Main Branch Build
 
 on:
-  schedule:
-    - cron: '30 5 * * 1'
+  workflow_dispatch:
+  # schedule:
+  #   - cron: '30 5 * * 1'
 
 jobs:
   mainBuild-x86-64:
@@ -10,29 +11,32 @@ jobs:
       matrix:
         include:
           - os: fedora
-            version: 40
+            version: 43
             dockernamespace: quay.io/fedora/fedora
-          - os: fedora
-            version: 41
-            dockernamespace: quay.io/fedora/fedora
-          - os: fedora
-            version: 42
-            dockernamespace: quay.io/fedora/fedora
-          - os: centos-stream
-            version: stream9
-            dockernamespace: quay.io/centos/centos
-          - os: rocky
-            version: 9
-            dockernamespace: quay.io/rockylinux/rockylinux
-          - os: rocky
-            version: 10
-            dockernamespace: quay.io/rockylinux/rockylinux
-          - os: almalinux
-            version: 9
-            dockernamespace: quay.io/almalinuxorg/almalinux
-          - os: almalinux
-            version: 10
-            dockernamespace: quay.io/almalinuxorg/almalinux
+          # - os: fedora
+          #   version: 40
+          #   dockernamespace: quay.io/fedora/fedora
+          # - os: fedora
+          #   version: 41
+          #   dockernamespace: quay.io/fedora/fedora
+          # - os: fedora
+          #   version: 42
+          #   dockernamespace: quay.io/fedora/fedora
+          # - os: centos-stream
+          #   version: stream9
+          #   dockernamespace: quay.io/centos/centos
+          # - os: rocky
+          #   version: 9
+          #   dockernamespace: quay.io/rockylinux/rockylinux
+          # - os: rocky
+          #   version: 10
+          #   dockernamespace: quay.io/rockylinux/rockylinux
+          # - os: almalinux
+          #   version: 9
+          #   dockernamespace: quay.io/almalinuxorg/almalinux
+          # - os: almalinux
+          #   version: 10
+          #   dockernamespace: quay.io/almalinuxorg/almalinux
     runs-on: ubuntu-latest
     container: 
         image: ${{ matrix.dockernamespace }}:${{ matrix.version }}
@@ -51,48 +55,48 @@ jobs:
       - name: Run CI
         run: ci/${{ matrix.os }}.sh
   
-  mainBuild-arm:
-    strategy:
-      matrix:
-        include:
-          - os: fedora
-            version: 40
-            dockernamespace: quay.io/fedora/fedora
-          - os: fedora
-            version: 41
-            dockernamespace: quay.io/fedora/fedora
-          - os: fedora
-            version: 42
-            dockernamespace: quay.io/fedora/fedora
-          - os: centos-stream
-            version: stream9
-            dockernamespace: quay.io/centos/centos
-          - os: rocky
-            version: 9
-            dockernamespace: quay.io/rockylinux/rockylinux
-          - os: rocky
-            version: 10
-            dockernamespace: quay.io/rockylinux/rockylinux
-          - os: almalinux
-            version: 9
-            dockernamespace: quay.io/almalinuxorg/almalinux
-          - os: almalinux
-            version: 10
-            dockernamespace: quay.io/almalinuxorg/almalinux
-    runs-on: ubuntu-24.04-arm
-    container: 
-        image: ${{ matrix.dockernamespace }}:${{ matrix.version }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Specify Build Target
-        run: |
-          echo "SPECIFICTARGET=main" >> $GITHUB_ENV
-
-      - name: Environment variable for OS version
-        run: |
-          echo "OSVERSION=${{ matrix.version }}" >> $GITHUB_ENV
-
-      - name: Run CI
-        run: ci/${{ matrix.os }}.sh
+  # mainBuild-arm:
+  #   strategy:
+  #     matrix:
+  #       include:
+  #         - os: fedora
+  #           version: 40
+  #           dockernamespace: quay.io/fedora/fedora
+  #         - os: fedora
+  #           version: 41
+  #           dockernamespace: quay.io/fedora/fedora
+  #         - os: fedora
+  #           version: 42
+  #           dockernamespace: quay.io/fedora/fedora
+  #         - os: centos-stream
+  #           version: stream9
+  #           dockernamespace: quay.io/centos/centos
+  #         - os: rocky
+  #           version: 9
+  #           dockernamespace: quay.io/rockylinux/rockylinux
+  #         - os: rocky
+  #           version: 10
+  #           dockernamespace: quay.io/rockylinux/rockylinux
+  #         - os: almalinux
+  #           version: 9
+  #           dockernamespace: quay.io/almalinuxorg/almalinux
+  #         - os: almalinux
+  #           version: 10
+  #           dockernamespace: quay.io/almalinuxorg/almalinux
+  #   runs-on: ubuntu-24.04-arm
+  #   container: 
+  #       image: ${{ matrix.dockernamespace }}:${{ matrix.version }}
+  # 
+  #   steps:
+  #     - uses: actions/checkout@v4
+  # 
+  #     - name: Specify Build Target
+  #       run: |
+  #         echo "SPECIFICTARGET=main" >> $GITHUB_ENV
+  # 
+  #     - name: Environment variable for OS version
+  #       run: |
+  #         echo "OSVERSION=${{ matrix.version }}" >> $GITHUB_ENV
+  # 
+  #     - name: Run CI
+  #       run: ci/${{ matrix.os }}.sh
