--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,11 @@ on:
     inputs:
       version:
         description: 'Release version (e.g., 1.14.11)'
-        required: true
+        required: false
         type: string
       release:
-        description: 'Release number (e.g., 1)'
-        required: true
-        default: '1'
+        description: 'Release number (e.g., 1) - defaults to Makefile value'
+        required: false
         type: string
       create_release:
         description: 'Create GitHub release'
@@ -68,7 +67,7 @@ jobs:
 
       - name: Get version
         run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ inputs.version }}" ]; then
             echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
           elif [ "${{ github.event_name }}" = "push" ]; then
             # Extract version from tag (e.g., v1.14.11-1 -> 1.14.11)
@@ -79,7 +78,7 @@ jobs:
       
       - name: Get release
         run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ inputs.release }}" ]; then
             echo "RELEASE=${{ inputs.release }}" >> $GITHUB_ENV
           elif [ "${{ github.event_name }}" = "push" ]; then
             # Extract release from tag (e.g., v1.14.11-1 -> 1)
