disable build check

--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -1,9 +1,10 @@
 name: Build Check
 
 on:
-  push:
-  pull_request:
-    branches: [ master ]
+  # push:
+  # pull_request:
+  #   branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   # makeTest:
